Bugs left to be fixed: btn href & the multiple collapse

--- a/assets/src/styles/blocks/Accordion.scss
+++ b/assets/src/styles/blocks/Accordion.scss
@@ -1,19 +1,3 @@
-// .accordion-style-minimal {
-//   background: #eee7e754;
-//   color: $black;
-//   -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-//   -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-//   box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-// }
-
-// .accordion-style-gradient {
-//   background-image: linear-gradient(to right, #004569, #015177, #015e85, #016b94, #0079a2);
-//   color: $white;
-//   -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-//   -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-//   box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-// }
-
 .accordion-block {
   text-align: left;
   font-family: $roboto;
@@ -29,7 +13,6 @@
     // &:hover+.panel {
     //   display: block;
     //   transition-timing-function: ease-out;
-
     // }
 
     .accordion {
@@ -48,7 +31,6 @@
       }
 
       .accordion-headline {
-        // height: fit-content;
         background-color: $dark-blue;
         color: $white;
         margin: 1rem 0 0;
@@ -86,27 +68,20 @@
     .visibility {
       visibility: hidden;
       opacity: 0;
-      // transition: visibility 1s, opacity 1s ease-in-out;
-      // transition: height ease 1s;
       overflow: hidden;
       height: 0;
     }
 
     .panel {
       padding: .7rem 1.2rem;
-      // display: none;
-      // visibility: hidden;
-      // opacity: 0;
-      transition: visibility 1s, opacity 1s, height 1s ease-in-out;
       background-color: white;
       color: $black;
       overflow: hidden;
-      // -webkit-transition: opacity 600ms, visibility 600ms;
-      // transition: opacity 600ms, visibility 600ms; // -webkit-transition: all .3s ease .15s;
-      // -moz-transition: all .3s ease .15s;
-      // -o-transition: all .3s ease .15s;
-      // -ms-transition: all .3s ease .15s;
-      // transition: all .3s ease .15s;
+      transition: visibility 1s, opacity 1s, height 1s ease-in-out;
+      -webkit-transition: visibility 1s, opacity 1s, height 1s ease-in-out;
+      -moz-transition: all .3s ease .15s;
+      -o-transition: visibility 1s, opacity 1s, height 1s ease-in-out;
+      -ms-transition: visibility 1s, opacity 1s, height 1s ease-in-out;
     }
 
     .accordion-text {
@@ -122,29 +97,38 @@
         max-width: 30%;
       }
     }
-
-    .drop-shadow {
-      -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-      -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-      box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
-    }
   }
 
   .rotate {
     transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);// -webkit-transition: all .3s ease .15s;
+    -webkit-transform: rotate(45deg); // -webkit-transition: all .3s ease .15s;
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
-
   }
 
-  .btn-mnml {
-    color: #6c757d;
+  // .btn-mnml {
+  //   color: #6c757d;
 
-    &:hover {
-      border-color: #6c757d;
-      background-color: $white;
-    }
-  }
+  //   &:hover {
+  //     border-color: #6c757d;
+  //     background-color: $white;
+  //   }
+  // }
+
+  // .accordion-style-minimal {
+  //   background: #eee7e754;
+  //   color: $black;
+  //   -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+  //   -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+  //   box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+  // }
+
+  // .accordion-style-gradient {
+  //   background-image: linear-gradient(to right, #004569, #015177, #015e85, #016b94, #0079a2);
+  //   color: $white;
+  //   -webkit-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+  //   -moz-box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+  //   box-shadow: 7px 7px 14px -2px rgba(0, 0, 0, 0.21);
+  // }
 }
